BUG: Wrapping issues in analytics when a dataset name is   too long
QA: Make sure the four tables at the bottom of sitewide analytics
  don't get too wide (they should always be a two column layout).

--- a/app/styles/screen-metrics.sass
+++ b/app/styles/screen-metrics.sass
@@ -68,6 +68,9 @@
     .gridList thead tr th
       background-color: #dedede
 
+    col.description
+      width: 85%
+
     .value
       text-align: right
 
@@ -77,9 +80,6 @@
       padding: 0.4em 0.8em
       &:last-child
         border-bottom: 2px solid #eee
-
-      .description
-        @include clip-text
 
       .subLinksContainer, .subValuesContainer
         display: none
